# SelfPortrait

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test2.cpp
cmake-modules/: FindCxxTest.cmake  FindLLVM.cmake  FindLua.cmake
pack/: PKGBUILD  selfportrait.spec
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  main.cpp  test_functions.cpp  test_functions.h
src/lua_module/: CMakeLists.txt  luamodule.cpp  luamodule.h
src/parser/: CMakeLists.txt  definitions.cpp  definitions.h  parser.cpp
src/reflection/: CMakeLists.txt  attribute.h  call_utils.h  class.cpp  class.h  collection_utils.h  config.h  constructor.cpp  constructor.h  conversion_cache.cpp  conversion_cache.h  function.cpp  function.h  main.cpp  method.cpp  method.h  object.h  out.cpp  proxy.cpp  proxy.h  reflection.cpp  reflection.h  reflection_impl.h  runner.cpp  selfportrait_config.h  str_conversion.h  str_utils.cpp  str_utils.h  typelist.h  typeutils.h  variant.cpp  variant.h
src/unit_test/: CMakeLists.txt  SmallArray_test.cpp  SmallArray_test.h  attribute_test.cpp  attribute_test.h  attribute_test.lua  class_test.cpp  class_test.h  class_test.lua  constructor_test.cpp  constructor_test.h  constructor_test.lua  cxxtest.lua  function_test.cpp  function_test.h  function_test.lua  lua_utils.cpp  lua_utils.h  method_test.cpp  method_test.h  method_test.lua  parser_test.cpp  parser_test.h  proxy_test.cpp  proxy_test.h  proxy_test.lua  test_utils.cpp  test_utils.h  type_utils_test.cpp  type_utils_test.h  utilities_test.cpp  utilities_test.h  variant_test.cpp  variant_test.h  variant_test.lua
src/unit_test/parser_data/input/: functions.h  inheritance.h  interfaces.h  simple_class.h  templates.h
src/unit_test/parser_data/output/: functions.cpp  inheritance.cpp  interfaces.cpp  simple_class.cpp  templates.cpp
src/utils/: CMakeLists.txt  SmallArray.h  lua_utils.cpp  lua_utils.h
